--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "mime-db": "^1.52.0",
     "mime-lookup": "^0.0.2",
     "socket.io": "^4.4.1"
+  },
+  "scripts": {
+    "serve": "nodemon ./index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
